[package]
name = "easy_secp256k1"
version = "1.0.0"
edition = "2024"

[dependencies]
bitcoin = "0.32.5"
bitcoin_hashes = "0.16.0"
chacha20-poly1305 = "0.1.1"
secp256k1 = {version="0.29.1", features=["rand", "rand-std", "global-context"]}
serde = { version = "1.0.219", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde", "secp256k1/serde"]
