[package]
name = "easy_secp256k1"
version = "0.1.2"
edition = "2024"
authors = ["Caleb Couch <caleb@orange.me>"]
description = "Easy interface to secp256k1 29.1"
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/easy_secp256k1"


[dependencies]
bitcoin = "0.32.7"
bitcoin_hashes = "0.16.0"
chacha20-poly1305 = "0.1.1"
secp256k1 = {version="0.29.1", features=["rand", "rand-std", "global-context"]}
serde = { version = "1.0.219", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde", "secp256k1/serde"]
